Opened 16 years ago
Closed 16 years ago
#4304 closed bug (fixed)
[app_server] crash in Window::Screen ()
Reported by: | diver | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
app_server crashed after runnung Magnify, see screenshot for a backtrace
Happened on hrev32593 in VirtualBox 3.0.4
Attachments (2)
Change History (5)
by , 16 years ago
Attachment: | magnify.png added |
---|
by , 16 years ago
Attachment: | client.png added |
---|
comment:1 by , 16 years ago
Had a quick look, and what happens obviously is that ServerWindow::Window() can return NULL (and does, in this case, since the window which Magnify uses to call BScreen is an offscreen window). So I guess that, for offscreen windows, we'll have to resort to use the B_MAIN_SCREEN_ID (for compatibility), or return an error message, since Magnify is at fault here. The real problem, obviously, is that the app_server shouldn't crash :-)
comment:2 by , 16 years ago
Owner: | changed from | to
---|
comment:3 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Should be fixed in hrev32611. Please review.
Backtrace of the client app