Don't crash the app server if the user calls BScreen(BWindow *) supplying an offscreen window (Magnify does that, and that's the cause of ticket #4304).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32611 a95241bf-73f2-0310-859d-f6bbb57e9c96